Changes on 06/14/23 Solved problem where "." in each square was visible: matched the colour of the text to the background under all conditions where the mines are deactivated. When mines are active, the "." changes to the squares mine count and appears black for visibility. Made grid border black for better contrast with colors of squares

--- a/style.css
+++ b/style.css
@@ -52,17 +52,20 @@ h1  {
     padding: 1rem 0;
     flex: 1;
     gap: 2px;
+    
     align-content: center;
-    border: 0.5px solid rgb(214, 198, 144);
+    border: 0.5px solid rgb(0, 0, 0);
     display: flex;
     flex-basis: 1;
     font-size: 3em;
     justify-content: center;   
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: peru;
     }
 
 .column:hover {
     background-color:sandybrown;
+    color:sandybrown;
     }
 
 
